--- a/src/styles.scss
+++ b/src/styles.scss
@@ -1,1 +1,6 @@
 /* You can add global styles to this file, and also import other style files */
+.scope-of-component {
+  text-transform: uppercase;
+  color: plum;
+  font-size: 2rem;
+}
